--- a/simple-page-cv/README
+++ b/simple-page-cv/README
@@ -6,3 +6,6 @@ El objetivo de este proyecto es enseñarte a crear un CV estructurado de una sol
 
 - HTML5
 - CSS3
+
+Este proyecto forma parte del reto propuesto en:  
+🔗 [https://roadmap.sh/projects/single-page-cv](https://roadmap.sh/projects/single-page-cv)
