--- a/simple-page-cv/README
+++ b/simple-page-cv/README
@@ -8,4 +8,4 @@ El objetivo de este proyecto es enseñarte a crear un CV estructurado de una sol
 - CSS3
 
 Este proyecto forma parte del reto propuesto en:  
-🔗 [https://roadmap.sh/projects/single-page-cv](https://roadmap.sh/projects/single-page-cv)
+[Roadmap: Single-page](https://roadmap.sh/projects/single-page-cv)
